gatekeeper/constraints/k8s-no-root-user.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8spspanonymoususers
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  crd:
    spec:
      names:
        kind: K8sPSPAnonymousUsers
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spspanonymoususers

        violation[{"msg": msg}] {
          # Check pod level security context
          input.review.object.spec.securityContext.runAsUser == 0
          msg := "Pod securityContext runAsUser cannot be 0 (root)."
        }

        violation[{"msg": msg}] {
          # Check container level security context
          container := input.review.object.spec.containers[_]
          container.securityContext.runAsUser == 0
          msg := sprintf("Container '%v' securityContext runAsUser cannot be 0 (root).", [container.name])
        }
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAnonymousUsers
metadata:
  name: no-root-user
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - demo
