gatekeeper/constraints/k8s-require-resources.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8scontainerlimits
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  crd:
    spec:
      names:
        kind: K8sContainerLimits
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8scontainerlimits

        violation[{"msg": msg}] {
          general_violation[msg]
        }

        general_violation[msg] {
          container := input.review.object.spec.containers[_]
          not has_limits(container)
          msg := sprintf("Container '%v' does not have CPU and/or Memory limits defined.", [container.name])
        }

        has_limits(container) {
          container.resources.limits.cpu
          container.resources.limits.memory
        }
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sContainerLimits
metadata:
  name: require-resources
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - demo
